Fix the layout issue on the module navbar on mobile

--- a/app/components/ModuleNav.module.css
+++ b/app/components/ModuleNav.module.css
@@ -1,17 +1,18 @@
 .nav {
   max-width: 1024px;
-  width: 90vw;
+  width: 80vw;
   border-bottom: 1px solid var(--neutral-200);
   background: var(--background);
   position: sticky;
   top: 0;
   z-index: 10;
+  margin: 0 auto;
   margin-top: -60px;
 }
 
 .container {
   margin: 0 auto;
-  padding: 0 24px;
+  /* padding: 0 24px; */
 }
 
 .scroll {
@@ -39,6 +40,10 @@
 @media (min-width: 768px) {
   .link {
     font-size: 0.9rem;
+  }
+
+  .nav {
+    width: 90vw;
   }
 }
 
